refactor: refactorizacion de todo el codigo